--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -1,85 +1,161 @@
 <!DOCTYPE html>
 <html lang="vi">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Phản hồi khách hàng</title>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Phản hồi khách hàng</title>
+        <!-- Bootstrap 5 -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+        />
+        <!-- Font Awesome -->
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        />
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <!-- Custom CSS -->
+        <link rel="stylesheet" href="/css/style.css" />
+    </head>
 
-    <!-- Bootstrap 5 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="/css/style.css">
-
-</head>
-
-<body>
-    <!-- Login Form -->
-    <div id="login-screen">
-        <form id="login-form" class="bg-light p-4 rounded shadow">
-            <h4 class="mb-3 text-center text-dark">Login</h4>
-            <div class="mb-3">
-                <input type="text" id="username" class="form-control" placeholder="Username" required>
-            </div>
-            <div class="mb-3">
-                <input type="password" id="password" class="form-control" placeholder="Password" required>
-            </div>
-            <button type="submit" class="btn btn-warning w-100">Login</button>
-        </form>
-        <p id="login-status"></p>
-    </div>
-    <!-- Sidebar -->
-    <div class="row">
-
-        <!-- Main Content -->
-        <div id="sidebar" class="d-flex col-lg-3 col-md-5 col-sm-12">
-            <nav class="sidebar bg-dark text-light p-3">
-                <h4 id="role" class="text-warning"><i class="fa-solid fa-store"></i></h4>
-                <ul id="sidebar-menu" class="nav flex-column">
-                    <li class="nav-item nav-home"><a href="index.html" class="nav-link"><i
-                                class="fa-solid fa-house"></i> Home</a></li>
-                    <li class="nav-item nav-report"><a href="report.html" class="nav-link"><i
-                                class="fa-solid fa-file-invoice ac"></i> Report</a></li>
-                    <li class="nav-item nav-goods"><a href="goods.html" class="nav-link"><i
-                                class="fa-solid fa-box ac"></i> Goods</a></li>
-                    <li class="nav-item nav-order"><a href="order.html" class="nav-link"><i
-                                class="fa-solid fa-clipboard-list ac"></i> Order</a></li>
-                    <li class="nav-item nav-staff"><a href="staff.html" class="nav-link"><i
-                                class="fa-solid fa-user ac"></i> Staff</a></li>
-                    <li class="nav-item nav-after-sale"><a href="after-sale.html" class="nav-link"><i
-                                class="fa-solid fa-headset ac"></i> After-sale</a></li>
-                    <li class="nav-item nav-review"><a href="review.html" class="nav-link"><i
-                                class="fa-solid fa-star ac"></i> Review</a></li>
-                    <li class="nav-item mt-auto">
-                        <a href="#" class="nav-link text-danger" onclick="logout()">
-                            <i class="fa-solid fa-right-from-bracket"></i>Logout
-                        </a>
-                    </li>
-                </ul>
-            </nav>
+    <body>
+        <!-- Login Form -->
+        <div id="login-screen">
+            <form id="login-form" class="bg-light p-4 rounded shadow">
+                <h4 class="mb-3 text-center text-dark">Login</h4>
+                <div class="mb-3">
+                    <input
+                        type="text"
+                        id="username"
+                        class="form-control"
+                        placeholder="Username"
+                        required
+                    />
+                </div>
+                <div class="mb-3">
+                    <input
+                        type="password"
+                        id="password"
+                        class="form-control"
+                        placeholder="Password"
+                        required
+                    />
+                </div>
+                <button type="submit" class="btn btn-warning w-100">
+                    Login
+                </button>
+            </form>
+            <p id="login-status"></p>
         </div>
-
-        <div id="main-content" class="main-content col-lg-9 col-md-7 col-sm-12 ">
-            <div class=" py-2 d-flex  w-100 justify-content-center">
-                <h5 id="main-title" class="text-dark"><i class="fa-solid fa-shop"> REPORT</i></h5>
+        <!-- Sidebar -->
+        <div class="row">
+            <!-- Main Content -->
+            <div id="sidebar" class="d-flex col-lg-3 col-md-5 col-sm-12">
+                <nav class="sidebar bg-dark text-light p-3">
+                    <h4 id="role" class="text-warning">
+                        <i class="fa-solid fa-store"></i>
+                    </h4>
+                    <ul id="sidebar-menu" class="nav flex-column">
+                        <li class="nav-item nav-home">
+                            <a href="index.html" class="nav-link"
+                                ><i class="fa-solid fa-house"></i> Home</a
+                            >
+                        </li>
+                        <li class="nav-item nav-report">
+                            <a href="report.html" class="nav-link"
+                                ><i class="fa-solid fa-file-invoice ac"></i>
+                                Report</a
+                            >
+                        </li>
+                        <li class="nav-item nav-goods">
+                            <a href="goods.html" class="nav-link"
+                                ><i class="fa-solid fa-box ac"></i> Goods</a
+                            >
+                        </li>
+                        <li class="nav-item nav-order">
+                            <a href="order.html" class="nav-link"
+                                ><i class="fa-solid fa-clipboard-list ac"></i>
+                                Order</a
+                            >
+                        </li>
+                        <li class="nav-item nav-staff">
+                            <a href="staff.html" class="nav-link"
+                                ><i class="fa-solid fa-user ac"></i> Staff</a
+                            >
+                        </li>
+                        <li class="nav-item nav-after-sale">
+                            <a href="after-sale.html" class="nav-link"
+                                ><i class="fa-solid fa-headset ac"></i>
+                                After-sale</a
+                            >
+                        </li>
+                        <li class="nav-item nav-review">
+                            <a href="review.html" class="nav-link"
+                                ><i class="fa-solid fa-star ac"></i> Review</a
+                            >
+                        </li>
+                        <li class="nav-item mt-auto">
+                            <a
+                                href="#"
+                                class="nav-link text-danger"
+                                onclick="logout()"
+                            >
+                                <i class="fa-solid fa-right-from-bracket"></i
+                                >Logout
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
-            <div class="container">
-                <label>Từ ngày</label>
-                <input id="fromDate" type="date">
-                <label>Tới ngày</label>
-                <input id="toDate" type="date">
-                <button id="filterDate" class="btn btn-warning">Lọc</button>
-                <canvas id="reportRevenueChart" height="120"></canvas>
+
+            <div
+                id="main-content"
+                class="main-content col-lg-9 col-md-7 col-sm-12"
+            >
+                <div class="py-2 d-flex w-100 justify-content-center">
+                    <h5 id="main-title" class="text-dark">
+                        <i class="fa-solid fa-shop"> REPORT</i>
+                    </h5>
+                </div>
+                <div class="container">
+                    <h3>Báo cáo doanh thu</h3>
+                    <label>Từ ngày</label>
+                    <input id="fromDate" type="date" />
+                    <label>Tới ngày</label>
+                    <input id="toDate" type="date" />
+                    <button id="filterDate" class="btn btn-warning">Lọc</button>
+                    <canvas id="reportRevenueChart" height="120"></canvas>
+                </div>
+                <div class="container mt-5">
+                    <h3>Lịch sử hoá đơn</h3>
+                    <label>Từ ngày</label>
+                    <input id="fromDateBill" type="date" />
+                    <label>Tới ngày</label>
+                    <input id="toDateBill" type="date" />
+                    <label for="storeSelect">Cửa hàng</label>
+                    <select id="storeSelect"></select>
+                    <button id="filterDateBill" class="btn btn-warning">
+                        Lọc
+                    </button>
+
+                    <table class="mt-5">
+                        <thead>
+                            <tr>
+                                <th>Mã hoá đơn</th>
+                                <th>Nhân viên</th>
+                                <th>Ngày</th>
+                                <th>Cửa hàng</th>
+                            </tr>
+                        </thead>
+                        <tbody id="bill-body"></tbody>
+                    </table>
+                </div>
             </div>
         </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./scripts/report.js"></script>
-    <script src="./scripts/login-logout.js"></script>
-    <script src="./scripts/content-loader.js"></script>
-</body>
-
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="./scripts/report.js"></script>
+        <script src="./scripts/login-logout.js"></script>
+    </body>
 </html>
